<resources>
    <string name="app_name">FuelFinder</string>
    <string name="search_button">Chercher</string>
    <string name="query_hint">Ville, Adresse, Code postal, Carburant</string>
    <string name="nav_open">Ouvrir</string>
    <string name="nav_close">Fermer</string>
    <string name="stationList">Liste des stations</string>
    <string name="stationMap">Carte des stations</string>
    <string name="stationDetail">Detail de la station</string>
    <string name="nav_liste">Liste des stations</string>
    <string name="nav_map">Carte</string>
    <string name="nav_exit">Quitter</string>
    <string name="me">Moi</string>
    <string name="gazole">Gasoil</string>
    <string name="sp98">Sans-plomb 98</string>
    <string name="e85">Ethanol 85</string>
    <string name="nav_back">Retour</string>
    <string name="viewOnMap">Voir sur la carte</string>
    <string name="noInternet">Aucune connection internet</string>
</resources>